# rCore-Study

./: .gitignore  Dockerfile  README.md  start.sh
exercise/src/: main.rs
exercise/src/lab1/: mod.rs
exercise/src/lab2/: stack_trace.rs
kernel/: Cargo.toml  build.rs  start.sh
kernel/src/: batch.rs  config.rs  console.rs  lang_item.rs  link_app.S  linker.ld  loader.rs  main.rs  sbi.rs  timer.rs
kernel/src/mm/: address.rs  frame_allocator.rs  heap_allocater.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/syscall/: fs.rs  mod.rs  process.rs
kernel/src/task/: context.rs  mod.rs  switch.S  switch.rs  task.rs
kernel/src/trap/: context.rs  mod.rs  trap.S
user/: Cargo.toml
user/src/: lib.rs  syscall.rs
user_lib/: Cargo.toml
user_lib/.cargo/: config.toml
user_lib/script/: build_bin.py
user_lib/src/: console.rs  lib.rs  linker.ld  syscall.rs
