[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
rust-version = "1.62.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.8.0"
# riscv = { git = "https://github.com/rcore-os/riscv" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

# [[bin]]
# name = "kernel"
# test = false
# bench = false
