[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"

[lib]
name = "user"
test = false
bench = false

[[bin]]
name = "hello_world"
test = false
bench = false

[[bin]]
name = "power"
test = false
bench = false

[[bin]]
name = "sleep"
test = false
bench = false

[[bin]]
name = "store_fault"
test = false
bench = false
